--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   get: ^4.6.5
   get_storage: ^2.0.3
   http: ^0.13.4
+  responsive_grid: ^2.0.0
 
 dev_dependencies:
   flutter_lints: ^1.0.0
